--- a/ecommerce/Views/Shared/_Dashboard.cshtml
+++ b/ecommerce/Views/Shared/_Dashboard.cshtml
@@ -1,14 +1,12 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ecommerce</title>
-    <script type="importmap"></script>
+    <meta name="viewport" content="width=device-width" />
+    <title>@ViewBag.Title</title>
         <link rel="preload" href="./css/adminlte.css" as="style" />
     <!--end::Accessibility Features-->
     <!--begin::Fonts-->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   @*   <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fontsource/source-sans-3@5.0.12/index.css"
@@ -42,27 +40,14 @@
       integrity="sha256-4MX+61mt9NVvvuPjUWdUdyfZfxSB1/Rf9WtqRHgG5S0="
       crossorigin="anonymous"
     />
-@*     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/ecommerce.styles.css" asp-append-version="true" /> *@
 </head>
   <body class="layout-fixed sidebar-expand-lg sidebar-open bg-body-tertiary">
-    <div  class="app-wrapper">
-        <partial name="_TopNavbar.cshtml" />
-        <partial name="_SideBar.cshtml" />
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-              <partial name="_Footer.cshtml" />
-    </div>
-
-        <!--begin::Third Party Plugin(OverlayScrollbars)-->
-    <script
+      <script
       src="https://cdn.jsdelivr.net/npm/overlayscrollbars@2.11.0/browser/overlayscrollbars.browser.es6.min.js"
       crossorigin="anonymous"
     ></script>
     <!--end::Third Party Plugin(OverlayScrollbars)--><!--begin::Required Plugin(popperjs for Bootstrap 5)-->
-  @*   <script
+@*     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       crossorigin="anonymous"
     ></script> *@
@@ -251,84 +236,8 @@
       // - END PIE CHART -
       //-----------------
     </script>
-
-
-      <script>
-      // Color Mode Toggler
-      (() => {
-        'use strict';
-
-        const storedTheme = localStorage.getItem('theme');
-
-        const getPreferredTheme = () => {
-          if (storedTheme) {
-            return storedTheme;
-          }
-
-          return globalThis.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-        };
-
-        const setTheme = function (theme) {
-          if (theme === 'auto' && globalThis.matchMedia('(prefers-color-scheme: dark)').matches) {
-            document.documentElement.setAttribute('data-bs-theme', 'dark');
-          } else {
-            document.documentElement.setAttribute('data-bs-theme', theme);
-          }
-        };
-
-        setTheme(getPreferredTheme());
-
-        const showActiveTheme = (theme, focus = false) => {
-          const themeSwitcher = document.querySelector('#bd-theme');
-
-          if (!themeSwitcher) {
-            return;
-          }
-
-          const themeSwitcherText = document.querySelector('#bd-theme-text');
-          const activeThemeIcon = document.querySelector('.theme-icon-active i');
-          const btnToActive = document.querySelector(`[data-bs-theme-value="${theme}"]`);
-          const svgOfActiveBtn = btnToActive.querySelector('i').getAttribute('class');
-
-          for (const element of document.querySelectorAll('[data-bs-theme-value]')) {
-            element.classList.remove('active');
-            element.setAttribute('aria-pressed', 'false');
-          }
-
-          btnToActive.classList.add('active');
-          btnToActive.setAttribute('aria-pressed', 'true');
-          activeThemeIcon.setAttribute('class', svgOfActiveBtn);
-          const themeSwitcherLabel = `${themeSwitcherText.textContent} (${btnToActive.dataset.bsThemeValue})`;
-          themeSwitcher.setAttribute('aria-label', themeSwitcherLabel);
-
-          if (focus) {
-            themeSwitcher.focus();
-          }
-        };
-
-        globalThis.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
-          if (storedTheme !== 'light' || storedTheme !== 'dark') {
-            setTheme(getPreferredTheme());
-          }
-        });
-
-        globalThis.addEventListener('DOMContentLoaded', () => {
-          showActiveTheme(getPreferredTheme());
-
-          for (const toggle of document.querySelectorAll('[data-bs-theme-value]')) {
-            toggle.addEventListener('click', () => {
-              const theme = toggle.getAttribute('data-bs-theme-value');
-              localStorage.setItem('theme', theme);
-              setTheme(theme);
-              showActiveTheme(theme, true);
-            });
-          }
-        });
-      })();
-    </script>
-@*     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script> *@
-    @await RenderSectionAsync("Scripts", required: false)
+    <div>
+        @RenderBody()
+    </div>
 </body>
 </html>
